--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+
 :root {
   --site-title: "Sofia Sans", sans-serif;
+  --site-description: "Ubuntu", sans-serif;
 }
 
 body {
@@ -23,16 +26,16 @@ body {
 
 @keyframes title {
   0% {
-    background-color: #ae98a2;
+    background-color: #af96a1;
   }
   33% {
-    background-color: #ae98a2;
+    background-color: #aa8f9b;
   }
   66% {
-    background-color: #9f96b0;
+    background-color: #9a8eaf;
   }
   100% {
-    background-color: #a0a4bb;
+    background-color: #af96a1;
   }
 }
 
@@ -41,32 +44,61 @@ body {
   border: 2px solid white;
   font-family: var(--site-title);
   text-align: center;
-
   box-sizing: border-box;
+  width: 650px;
+  margin-top: 50px;
+
+  /* border styling animation by Temani Afif - March 23, 2022 - https://codepen.io/t_afif */
+
+  --c: white; /* the border color */
+  --b: 6px; /* the border thickness*/
+  --g: 5px; /* the gap on hover */
+
+  padding: calc(var(--g) + var(--b));
+  --_g: #0000 25%, var(--c) 0;
+  background: conic-gradient(
+        from 180deg at top var(--b) right var(--b),
+        var(--_g)
+      )
+      var(--_i, 200%) 0 /200% var(--_i, var(--b)) no-repeat,
+    conic-gradient(at bottom var(--b) left var(--b), var(--_g)) 0
+      var(--_i, 200%) / var(--_i, var(--b)) 200% no-repeat;
+  transition: 0.3s, background-position 0.3s 0.3s;
+  cursor: pointer;
 }
 
 .siteCard:hover {
-  border: 6px solid white;
-  transition: 100ms;
-  position: relative;
+  --_i: 100%;
+  transition: 0.1s, background-size 0.1s 0.1s;
 }
 
 .siteContent > h1 {
   color: rgb(40, 40, 40);
 }
 
+.siteContent > p {
+  font-family: var(--site-description);
+}
+
+#footer {
+  text-align: center;
+  padding-top: 50px;
+}
 @media only screen and (max-width: 1000px) {
   .siteCard {
     margin: auto;
     margin-top: 50px;
-    width: clamp(200px, 75vw, 350px);
-    height: clamp(100px, 15vh, 350px);
+
+    width: clamp(200px, 75vw, 550px);
+    height: auto;
     padding: clamp(20px, 3vw 30px);
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   .siteContent {
     width: 90%;
     height: 90%;
     margin: auto;
-    border: 3px solid red;
+    /* border: 3px solid red; */
   }
 }
